fixed footer alignment

--- a/main.css
+++ b/main.css
@@ -40,5 +40,5 @@ body {
 	height: auto;
 }
 #contact-info p{
-	margin: 0;
+	line-height: 4.5;
 }
